# CXX-Templates-The-Complete-Guide-2nd-Edition

./: CMakeLists.txt  README.md
basics/: CMakeLists.txt  addspace.hpp  addvalue.hpp  arrays.cpp  arrays.hpp  boolstring.hpp  boolstringgetbool.hpp  byref.hpp  byvalue.hpp  cref.cpp  errornovel1.cpp  errornovel2.cpp  foldtraverse.cpp  foreach.cpp  foreach.hpp  foreachinvoke.cpp  foreachinvoke.hpp  invoke.hpp  invokeret.hpp  isprime.hpp  isprime11.hpp  isprime14.hpp  len1.hpp  len2.hpp  lessarray.hpp  lessstring.hpp  max1.cpp  max1.hpp  max2.cpp  max3ref.cpp  max3val.cpp  max4.cpp  maxauto.hpp  maxcommon.hpp  maxconstexpr.hpp  maxdecltype.hpp  maxdecltypedecay.hpp  maxdefault1.hpp  maxdefault3.hpp  maxdefault4.hpp  (+39 more)
bridge/: forupto1.cpp  forupto2.hpp  forupto3.hpp  forupto4.cpp  functionptr.hpp  functorbridge.hpp  isequalitycomparable.hpp  specificfunctorbridge.hpp  tryequals.hpp
debugging/: hasderef.hpp  tracer.hpp  tracertest.cpp
deduce/: aliastemplate.cpp  initlist.cpp  resulttypetmpl.cpp
details/: adl.cpp  definitions1.hpp  definitions2.hpp  definitions3.hpp  fppm.cpp  funcoverload1.cpp  funcoverload1.hpp  funcoverload2.cpp  implicit.cpp  inject.cpp  lazy1.hpp  lazy2.cpp  max.cpp  nontmpl1.cpp  nontmpl2.cpp  tmplconstr.cpp  tupleoverload.cpp  variadicoverload.cpp
exprtmpl/: exprarray.hpp  exprops1.hpp  exprops1a.hpp  exprops2.hpp  exprops3.hpp  exprops4.hpp  exprscalar.hpp  sarray1.cpp  sarray1.hpp  sarray2.hpp  sarrayops1.hpp  sarrayops2.hpp
inherit/: basememberpair.hpp  countertest.cpp  ebco1.cpp  ebco2.cpp  empty.cpp  equalitycomparable.cpp  iteratorfacadeaccessskel.hpp  iteratorfacadeskel.hpp  listnode.hpp  listnodeiterator0.hpp  objectcounter.hpp  person.hpp  projectioniterator.cpp  virtual.cpp  (+2 more)
(+203 files in other folders)
