cmake_minimum_required(VERSION 3.13)

project(basics LANGUAGES CXX)

# add_executable(errornovel1 errornovel1.cpp)
# add_executable(errornovel2 errornovel2.cpp)
# add_executable(myfirstmain myfirstmain.cpp)
# add_executable(referror1 referror1.cpp)
# add_executable(referror2 referror2.cpp)
add_executable(arrays arrays.cpp)
add_executable(cref cref.cpp)
add_executable(foldtraverse foldtraverse.cpp)
add_executable(foreach foreach.cpp)
add_executable(foreachinvoke foreachinvoke.cpp)
add_executable(max1 max1.cpp)
add_executable(max2 max2.cpp)
add_executable(max3ref max3ref.cpp)
add_executable(max3val max3val.cpp)
add_executable(max4 max4.cpp)
add_executable(message message.cpp)
add_executable(move1 move1.cpp)
add_executable(move2 move2.cpp)
add_executable(specialmemtmpl1 specialmemtmpl1.cpp)
add_executable(specialmemtmpl3 specialmemtmpl3.cpp)
add_executable(stack1test stack1test.cpp)
add_executable(stack3test stack3test.cpp)
add_executable(stack9test stack9test.cpp)
add_executable(stackauto stackauto.cpp)
add_executable(stacknontype stacknontype.cpp)
add_executable(tmplparamref tmplparamref.cpp)
add_executable(varusing varusing.cpp)
